Trying deployment again.

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Book Collection</h1>
-<h1>This is a test version!</h1>
+<h1>Here we go again!</h1>
 <%= link_to 'Add New Book', new_book_path %>
 
 <table>
